| Summary: | ASTERISK-27495: DNS: Unexpected rr_type can cause crash | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2017-12-19 10:23:48.000-0600 | Date Closed: | 2017-12-20 08:01:33.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/DNS |
| Versions: | GIT 15.1.4 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | An unexpected rr_type when allocating a dns record can crash. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-12-19 10:23:49.224-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2017-12-20 08:01:34.876-0600 Change 7664 merged by Jenkins2: dns_core: Protect against array index violation. [https://gerrit.asterisk.org/7664|https://gerrit.asterisk.org/7664] By: Friendly Automation (friendly-automation) 2017-12-20 08:07:10.170-0600 Change 7667 merged by Jenkins2: dns_core: Protect against array index violation. [https://gerrit.asterisk.org/7667|https://gerrit.asterisk.org/7667] | ||